--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EMI Secure</string>
+    <string name="app_name">Dev Mobile</string>
     
     <!-- UI Labels -->
     <string name="your_emi_status">Your EMI Status</string>
